# InfiniTAM-Android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tinyxr/xr/infinitam/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  InfiniTAMApp.cpp  InfiniTAMApp.h  native-lib.cpp
app/src/main/cpp/FernRelocLib/: Relocaliser.cpp
app/src/main/cpp/ITMLib/Utils/: ITMLibSettings.cpp
app/src/main/cpp/ORUtils/: Image.h  MemoryBlock.h  ProjectionUtils.h
app/src/main/java/com/tinyxr/xr/infinitam/: IMUReceiver.java  InfiniTAMApplication.java  InfiniTAMMainScreen.java  InfiniTAMRenderer.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tinyxr/xr/infinitam/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
